k8s/banco.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banco-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banco
  template:
    metadata:
      labels:
        app: banco
    spec:
      containers:
        - name: banco
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: banco-service
spec:
  selector:
    app: banco
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
